Changelog
=========

5.7-dev - (unreleased)
----------------------

5.6 - (2014-08-27)
------------------
* Change: tags are now added and removed on the textarea to reflect the changes
  that can occour when using the jQuery token
  [ichimdav refs #20302]

5.5 - (2014-01-21)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

5.4 - (2013-07-08)
------------------
* Updated tags.js to replace .trim function with jQuery equivalent to prevent error in IE8.
  [lardymike]

5.3 - (2013-03-15)
------------------
* Added z3c.autoinclude entry point and remove refs from docs
  [davilima6]

5.2 - (2013-02-04)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.tags
* Change: don't copy schema when fiddling the subject field to add the tags
  macro as its expensive and not needed
  [ichimdav #13771]
* Feature: added browser layer for this package in order to avoid checking for
  package installation in subtypes.py
  [ichimdav #13677]

5.1 - (2013-01-15)
------------------
* Added German translations
  [skaeser]
* Added French translations
  [toutpt]

5.0 - (2012-10-16)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.tags
* Feature: Optimize keywords widget by using AJAX calls instead of loading tags
  [avoinea refs #5 github, refs #5595 eea]
* Feature: Added custom eea.tags widget for keywords
  [avoinea refs #5 github, refs #5595 eea]
* Bug fix: Fixed HISTORY.txt markup
  [ghicaale]

4.6 - (2012-08-28)
------------------
* Feature: Added buildouts folder which will contain
  various samples of configurations
  [ghicaale #5418]

4.5 - (2012-07-13)
------------------
* Bug fix: Use jQuery.inArray instead of indexOf
  to avoid errors in IE < 9
  [ichimdav #5355]

4.4 - (2012-04-26)
------------------