@@ -1,4 +1,5 @@
 #!/bin/sh
-wget -O bootstrap https://svn.eionet.europa.eu/repositories/Zope/trunk/www.eea.europa.eu/trunk/install.sh
-chmod u+x bootstrap
-./bootstrap
+curl -o "bootstrap.sh" -k https://raw.githubusercontent.com/eea/eea.plonebuildout.core/master/install.sh
+chmod u+x bootstrap.sh
+./bootstrap.sh
+
